2014-12-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Print 'data in sum CRC' to debug file.

2014-12-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Vault.pm: Continue to next dump if src device fail.

2014-12-10  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Change debuging level.

2014-12-04  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Use tapelist label only if the slot is
	  in SLOT_UNKNOWN state.

2014-12-04  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: Keep an $self->{'oldsize'}.
	* perl/Amanda/Taper/Scribe.pm (get_bytes_written): Return
	  $self->{'oldsize'} if the xfer is done.
	* perl/Amanda/Taper/Worker.pm: Truncate the status
	  file after writting to it.

2014-12-02  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck-device.pl: s/writablility/writability/.

2014-11-28  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amflock.c: Set errno.
	* perl/Amanda/Changer.pm: Print error on lock error.

2014-11-27  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Check with getuid since we are not root
	  there.
	* common-src/krb5-security.c: Drop root privileges, fix typos.

2014-11-26  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: Typo.

2014-11-24  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c (amar_attr_add_data_fd_thread): Close the file
	  descriptor when there is nothing more to read from.
	* client-src/sendbackup.c (check_result): Fix a race bug. sendbackup
	  do not always report the exit status of the application.
	  Once amvmware close its socket, an immediate call to waitpid(-1,)
	  might not trap it exited.
	  The patch check all pid we forked until they exit (max 5 seconds),
	  after that they are killed.

2014-11-19  Jean-Louis Martineau <martineau@zmanda.com>
	* Makefile.am: Add '-I /usr/share/aclocal' to ACLOCAL_AMFLAGS