@@ -1,3 +1,7 @@
+2014-12-16  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amvault.pl: Add --no-interactivity.
+	* man/xml-source/amvault.8.xml: Document --no-interactivity argument.
+
 2014-12-12  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/dumper.c: Print 'data in sum CRC' to debug file.
 
